# modern-python_semvertag

./: .gitignore  CLAUDE.md  Justfile  README.md  action.yml  context7.json  mkdocs.yml  pyproject.toml
.github/workflows/: _checks.yml  ci.yml  dependency-update.yml  publish.yml  release.yml  semvertag.yml  tag-major.yml
_archive/bmad/: 1-4-retryingtransport-with-retry-policy.md  1-5-gitlabprovider-four-endpoints-via-httpx2.md  1-6-branchprefixstrategy-100-branch-coverage.md  deferred-work.md  epic-2-retro-2026-05-29.md  prd-validation-report.md  product-brief-semvertag-distillate.md
_bmad/: 1-1-bootstrap-public-scaffolding-from-modern-di.md  1-2-settings-layer-with-aliaschoices-and-provenance.md  1-3-errors-runresult-output-redaction.md  1-7-wire-di-groups-and-typer-entrypoint.md  2-1-conventional-commits-strategy-and-per-repo-switching.md  3-1-doctor-chain-runner-and-exit-code-dominance.md  3-2-doctor-typer-subcommand-and-json-form.md  4-1-ci-workflow-polish.md  4-2-publish-workflow-via-trusted-publishing.md  4-3a-github-actions-marketplace-wrapper.md  4-3b-gitlab-ci-catalog-component.md  architecture.md  deferred-work.md  epic-1-retro-2026-05-28.md  epic-3-retro-2026-05-29.md  epics.md  implementation-readiness-report-2026-05-26.md  prd.md  product-brief-semvertag.md  sprint-status.yaml
architecture/: README.md  cli.md  providers.md  strategies.md
docs/: CNAME  index.md
docs/contributing/: release.md
docs/providers/: github.md  gitlab.md
docs/strategies/: branch-prefix.md  conventional-commits.md
docs/superpowers/plans/: 2026-05-31-bmad-to-superpowers-migration-and-httpx2-wrapper.md  2026-05-31-cli-overlay-simplification.md  2026-05-31-drop-doctor.md  2026-05-31-ioc-idiomatic-modern-di-typer.md  2026-05-31-settings-aliaschoices.md  2026-05-31-strategy-no-bump-cleanup.md  2026-05-31-usecase-callable.md  2026-05-31-v0-1-0-release-prep.md
docs/superpowers/specs/: 2026-05-31-bmad-to-superpowers-migration-and-httpx2-wrapper-design.md  2026-05-31-cli-overlay-simplification-design.md  2026-05-31-drop-doctor-design.md  2026-05-31-ioc-idiomatic-modern-di-typer-design.md  2026-05-31-strategy-no-bump-cleanup-design.md  2026-05-31-v0-1-0-release-prep-design.md
planning/: README.md  deferred.md
planning/changes/2026-05-31.01-bmad-to-superpowers-migration-and-httpx2-wrapper/: design.md
planning/changes/2026-05-31.02-drop-doctor/: design.md  plan.md
planning/changes/2026-05-31.03-settings-aliaschoices/: design.md  plan.md
planning/changes/2026-05-31.04-usecase-callable/: design.md
planning/changes/2026-05-31.05-ioc-idiomatic-modern-di-typer/: design.md  plan.md
planning/changes/2026-05-31.06-cli-overlay-simplification/: design.md  plan.md
planning/changes/2026-05-31.07-strategy-no-bump-cleanup/: design.md  plan.md
planning/changes/2026-05-31.08-v0-1-0-release-prep/: design.md  plan.md
planning/changes/2026-06-07.01-httpware-migration/: design.md  plan.md
planning/changes/2026-06-08.01-httpware-decoder-adoption/: design.md  plan.md
planning/changes/2026-06-08.02-github-provider/: design.md  plan.md
planning/changes/2026-06-08.03-action-yml-composite-wrapper/: design.md  plan.md
planning/changes/2026-06-09.01-mkdocs-github-actions/: design.md  plan.md
planning/changes/2026-06-09.02-dry-run-flag/: design.md
planning/changes/2026-06-09.03-action-yml-dry-run/: design.md  plan.md
planning/changes/2026-06-13.01-portable-planning-convention/: design.md  plan.md
planning/changes/2026-06-16.01-httpware-0.12-get-with-response/: change.md
planning/changes/2026-06-16.02-branch-prefix-patch-on-non-merge/: design.md  plan.md
planning/changes/2026-06-16.03-httpware-max-error-body-bytes/: design.md  plan.md
planning/changes/2026-06-20.01-flat-changes-generated-index/: change.md
planning/decisions/: 2026-06-23-forge-providers-not-unified.md  2026-06-24-blank-settings-values-normalize-to-unset.md  2026-06-24-error-translators-not-tabled.md  2026-06-26-outcome-renderings-stay-split.md  2026-06-26-semver-form-tags-only.md
planning/plans/: 2026-05-31-bmad-to-superpowers-migration-and-httpx2-wrapper.md  2026-05-31-drop-doctor.md  2026-05-31-usecase-callable.md  2026-05-31-v0-1-0-release-prep.md  2026-06-07-httpware-migration.md  2026-06-08-action-yml-composite-wrapper.md  2026-06-08-github-provider.md  2026-06-09-dry-run-flag.md
planning/releases/: 0.2.0.md  0.3.0.md  0.3.1.md  0.4.0.md  0.5.0.md  0.6.0.md  0.7.0.md  0.7.1.md  0.7.2.md  0.8.0.md  0.8.1.md
planning/specs/: 2026-05-31-bmad-to-superpowers-migration-and-httpx2-wrapper-design.md  2026-05-31-settings-aliaschoices-design.md  2026-05-31-usecase-callable-design.md  2026-06-07-httpware-migration-design.md  2026-06-08-action-yml-composite-wrapper-design.md  2026-06-08-github-provider-design.md  2026-06-08-httpware-decoder-adoption-design.md  2026-06-09-action-yml-dry-run-design.md  2026-06-09-dry-run-flag-design.md  2026-06-09-mkdocs-github-actions-design.md
semvertag/: __main__.py  _commit_parse.py  _errors.py  _link_pagination.py  _outcome.py  _output.py  _redact.py  _settings.py  _transport.py  _types.py  _use_case.py  ioc.py
semvertag/doctor/: __init__.py  _checks.py  _render.py
semvertag/providers/: _base.py  _errors.py  _http.py  _rest.py  github.py  gitlab.py
semvertag/strategies/: _base.py  branch_prefix.py  conventional_commits.py
templates/: semvertag.yml
tests/: _descriptor_gate.py  conftest.py  test_ci_descriptor_gate.py  test_smoke.py
tests/integration/: README.md  conftest.py  test_cli_doctor.py  test_cli_errors.py  test_cli_main_verb.py  test_cli_quiet_json_matrix.py  test_github_provider.py  test_gitlab_provider.py  test_strategy_switching.py
tests/unit/: conftest.py  test_branch_prefix_strategy.py  test_commit_parse.py  test_conventional_commits_strategy.py  test_doctor_checks.py  test_doctor_render.py  test_errors.py  test_http_client.py  test_ioc.py  test_link_pagination.py  test_outcome.py  test_output_json.py  test_output_rich.py  test_provenance.py  test_providers_errors.py  test_redact.py  test_settings.py  test_transport_retry.py  test_use_case.py
(+42 files in other folders)
