[project]
name = "semvertag"
description = "Auto-tag GitLab and GitHub repos with semantic version tags — one tool, two strategies, two providers."
authors = [{ name = "Artur Shiriev", email = "me@shiriev.ru" }]
requires-python = ">=3.11,<4"
license = "MIT"
readme = "README.md"
keywords = ["semver", "gitlab", "github", "ci", "auto-tag", "conventional-commits"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries",
]
version = "0"
dependencies = [
    "typer",
    "rich",
    "semver",
    "pydantic-settings",
    "modern-di-typer",
    "httpx2",
    "httpware[pydantic]>=0.12.0",
]

[project.scripts]
semvertag = "semvertag.__main__:main"

[project.urls]
repository = "https://github.com/modern-python/semvertag"
docs = "https://semvertag.modern-python.org"

[build-system]
requires = ["uv_build>=0.11,<1"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "semvertag"
module-root = ""

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "pytest-randomly",
    "pyyaml",
]
lint = [
    "ruff",
    "ty",
    "eof-fixer",
]

[tool.ruff]
fix = true
unsafe-fixes = true
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D1",
    "FBT",
    "TRY003",
    "EM102",
    "D203",
    "D212",
    "COM812",
    "ISC001",
    "S105",
]
isort.lines-after-imports = 2
isort.no-lines-before = ["standard-library", "local-folder"]

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = ["S101", "SLF001"]

[tool.pytest.ini_options]
addopts = "--cov=semvertag --cov=tests._descriptor_gate --cov-branch --cov-report term-missing"
testpaths = ["tests"]

[tool.coverage.report]
fail_under = 100
exclude_also = [
    "if typing.TYPE_CHECKING:",
]
